Fix links and color contrast

--- a/style.css
+++ b/style.css
@@ -69,6 +69,7 @@ body {
   font-family: 'Crete Round', sans-serif;
   font-style: normal;
   color: #ff6b00;
+  background-color: #1c1a19;
   font-weight: normal;
   font-size: 44px;
   line-height: 54px;
@@ -81,6 +82,7 @@ body {
   font-weight: bold;
   font-size: 18px;
   color: #fff5e1;
+  background-color: #1c1a19;
   line-height: 32px;
   display: flex;
   align-items: center;
@@ -92,6 +94,7 @@ body {
   font-style: normal;
   font-weight: normal;
   color: #fff;
+  background-color: #1c1a19;
   font-size: 16px;
   line-height: 24px;
   display: flex;
@@ -266,6 +269,7 @@ body {
   font-size: 32px;
   line-height: 44px;
   color: #fff;
+  background-color: #9e9e9e26;
 }
 
 .data p {
@@ -350,6 +354,7 @@ body {
   font-family: 'Crete Round', sans-serif;
   font-style: normal;
   color: #ff6b00;
+  background-color: #000;
   font-weight: normal;
   font-size: 56px;
   line-height: 64px;
@@ -635,6 +640,7 @@ body {
 
   .about-me h2 {
     font-size: 64px;
+    background-color: #000;
   }
 
   .about-me p {
@@ -766,6 +772,7 @@ body {
 
   .hide {
     visibility: hidden;
+    background-color: white;
   }
 
   .skills-grid {
